# UCL-Machine-Learning-MSc

./: (Part_1)_Seven_scientists.ipynb  (Part_2)_Bayesian_classifiers.ipynb  README.md  k_Nearest_Neighbours.ipynb
.github/workflows/: latex.yml
applied_deep_learning/ADL-group-project/: .gitignore  .gitmodules  cfg.json  config.yaml  datasets.py  evaluation_metrics.py  experiment.py  gen_cam_dataset.py  load_oxfordpets.sh  plot_utils.py  pyproject.toml  requirements.txt  requirements_new.txt  run.py  setup.py
applied_deep_learning/ADL-group-project/run_results/: 0.txt  1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
applied_deep_learning/ADL-group-project/utils/: logger.py  metrics.py  tqdm.py
applied_deep_learning/ADL-group-project/weakly_supervised/: cam.py  cam_sam.py  generate_sam_mask_from_bounding_box.py
applied_deep_learning/ADL-group-project/weakly_supervised/cam_sam_results/: metrics.json
applied_deep_learning/ADL-group-project/weakly_supervised/cam_sam_results/metrics/: metrics_summary.txt
reinforcement_learning/UCL_RL_assignment_2025/: 20009434_RL_part1.ipynb  20009434_RL_part2.ipynb  20009434_RL_part3.ipynb  20009434_RL_part4.ipynb
research_papers/: AR_pretrained.md  causal_ml.md  post_training.md  probabilistic_models.md  test_time_compute.md
supervised_learning/CW1/: CW_final.tex
supervised_learning/CW1_COMP0078/: Linear Regression.ipynb  k_NN.ipynb
unsupervised_learning/CW1/: symbols.txt  unsupervised_learning_CW.tex
(+17 files in other folders)
